Fix chromosome spelling
