# candig_cnv_service/api/api_definition.yaml
@@ -228,11 +228,11 @@ paths:
           schema:
             $ref: '#/components/schemas/sample_id'
         - in: query
-          name: chromsome
+          name: chromosome
           description: Chromosome to be queried
           required: true
           schema:
-            $ref: '#/components/schemas/chromsome'
+            $ref: '#/components/schemas/chromosome'
         - in: query
           name: start_position
           description: Starting position for query
@@ -350,14 +350,14 @@ components:
     Segment:
       type: object
       required:
-        - chromsome
+        - chromosome
         - start_position
         - end_position
         - copy_number
         - copy_number_ploidy_corrected
       properties:
-        chromsome:
-          $ref: '#/components/schemas/chromsome'
+        chromosome:
+          $ref: '#/components/schemas/chromosome'
         start_position:
           $ref: '#/components/schemas/start_position'
         end_position:
@@ -488,6 +488,6 @@ components:
       format: int32
       minimum: 0
     
-    chromsome:
+    chromosome:
       type: string
       example: 5
